# peelo-number

./: CMakeLists.txt  Doxyfile  LICENSE.md  README.md  annotated.html  classes.html  classpeelo_1_1number-members.html  classpeelo_1_1number.html  classpeelo_1_1number_1_1unit__error-members.html  classpeelo_1_1number_1_1unit__error.html  dir_30bb860588f86a592f62c1b922374aed.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacepeelo.html  namespaces.html  number_8hpp.html  number_8hpp_source.html  structpeelo_1_1number_1_1unit-members.html  structpeelo_1_1number_1_1unit.html
.github/workflows/: build.yml
cmake/: FindMPFR.cmake
include/peelo/: number.hpp
src/: arithmetic.cpp  assign.cpp  comparison.cpp  conversion.cpp  format.cpp  math.cpp  number.cpp  parser.cpp  rounding.cpp  unit.cpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  test_arithmetic.cpp  test_comparison.cpp  test_conversion.cpp  test_formatting.cpp  test_parser.cpp  test_rounding.cpp
